--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "moment": "^2.28.0",
-    "vue": "^2.6.12"
+    "vue": "^3.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.12"
+    "eslint-plugin-vue": "^7.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
@@ -27,7 +26,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "rules": {
