--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.7.0",
-    "vue": "^3.0.0-beta.1"
+    "core-js": "^3.8.0",
+    "vue": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.9",
     "@vue/cli-plugin-eslint": "^4.5.9",
     "@vue/cli-service": "^4.5.9",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "@vue/compiler-sfc": "^3.0.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-plugin-vue": "^7.0.0-alpha.0"
   },
   "eslintConfig": {
