--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^0.2.29",
+    "aws-amplify": "^3.3.10",
     "core-js": "^3.8.0",
-    "vue": "^3.0.3"
+    "vue": "^3.0.3",
+    "vue-router": "^4.0.0-rc.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.9",
