removed api and function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,27 +7,6 @@
       "customAuth": false
     }
   },
-  "function": {
-    "dailycodingchallengeAPIfunction": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "api": {
-    "dailycodingchallengewebAPI": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "dailycodingchallengeAPIfunction",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    }
-  }
+  "function": {},
+  "api": {}
 }
