--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_NAME="mihailozecar"
 
-VUE_APP_DCC_API = "https://upewtybl37.execute-api.eu-west-1.amazonaws.com/master"
+VUE_APP_DCC_API = "dailycodingchallengewebAPI"
