--- a/amplify/backend/auth/cognito4cbf2f47/cognito4cbf2f47-cloudformation-template.yml
+++ b/amplify/backend/auth/cognito4cbf2f47/cognito4cbf2f47-cloudformation-template.yml
@@ -119,7 +119,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'mihail56399031_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'mihaildd9f6450_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -131,10 +131,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: mihail56399031_role_external_id
+                sts:ExternalId: mihaildd9f6450_role_external_id
       Policies:
         -
-          PolicyName: mihail56399031-sns-policy
+          PolicyName: mihaildd9f6450-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -182,7 +182,7 @@ Resources:
       SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: mihail56399031_role_external_id
+        ExternalId: mihaildd9f6450_role_external_id
     
   
   UserPoolClientWeb:
@@ -190,7 +190,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: mihail56399031_app_clientWeb
+      ClientName: mihaildd9f6450_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -200,7 +200,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: mihail56399031_app_client
+      ClientName: mihaildd9f6450_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -265,7 +265,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: mihail56399031_userpoolclient_lambda_iam_policy
+      PolicyName: mihaildd9f6450_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -282,7 +282,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: mihail56399031_userpoolclient_lambda_log_policy
+      PolicyName: mihaildd9f6450_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -322,7 +322,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'mihailozecar_identitypool_56399031', !Join ['',['mihailozecar_identitypool_56399031', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'mihailozecarcom_identitypool_dd9f6450', !Join ['',['mihailozecarcom_identitypool_dd9f6450', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
