--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -3,11 +3,12 @@
     "dailycodingchallengeWebAPIFunction": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     }
   },
   "auth": {
-    "cognitod1859fec": {
+    "cognito4cbf2f47": {
       "service": "Cognito",
       "serviceType": "managed",
       "providerPlugin": "awscloudformation"
